# NBodyTouch

./: .gitignore  CMakeLists.txt  build-native.sh  build-rpi5.sh  build_on_raspi.txt  generate_hr_data.py
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: assets
android/app/src/main/jni/: CMakeLists.txt
assets/: hr_data.csv
cmake/: toolchain-rpi5.cmake
include/: app.h  assets.h  compat.h  input_handler.h  locale.h  localization.h  pointer.h  renderer.h  simulation.h  star.h  ui.h
src/: app.cpp  assets.cpp  input_handler.cpp  main.cpp  renderer.cpp  simulation.cpp  star.cpp  ui.cpp
